<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>drive_control</name>
  <version>1.0.0</version>
  <description>
    TurtleBot3 Burger Fahrsteuerung (Python-Portierung des urspruenglichen
    C++ Nodes). Faehrt geradeaus, weicht Hindernissen per 180-Grad-Drehung
    aus und haelt den Kurs ueber die Odometrie (behebt das schraege Fahren).
  </description>
  <maintainer email="timofahrmer@gmail.com">Timo Fahrmer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
